All nodes display summary information fully, except the processing_control node.